fix: fix video embeds not be able to enter fullscreen on iOS

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,16 +1,5 @@
-.markdown-preview-view .plyr.plyr--video {
-  margin: auto;
-  min-width: var(--plyr-min-width);
-  width: min(100%, var(--max-ratio-width));
-}
-
 input.incorrect {
   color: #eb3223;
-}
-
-.markdown-preview-view .plyr.plyr--video:not(:fullscreen) video {
-  width: var(--max-ratio-width);
-  margin: auto;
 }
 
 .plyr__poster {
